--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Color Flipper JS</title>
 </head>
 
-<body>
+<body id="body">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
