--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h1>Color Flipper</h1>
-                <button id="btn" class="btn btn-primary">Cambiar color</button>
+                <button id="btn" class="btn btn-primary">Flip color!</button>
                 <h2 id="color-code">#FFFFFF</h2>
             </div>
         </div>
