style footer link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </body>
 
 <footer>
-    <p>&copy; 2023 jose137sp</p>
+    <p>&copy; 2023 <a href="https://github.com/jose137sp">jose137sp</a></p>
 </footer>
 
 </html>
