--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
-    <meta property="og:image" content="https://color-flipper-js.web.app/favicon.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="200">
-    <meta property="og:image:height" content="200">
+    <meta property="og:title" content="Color Flipper">
+    <meta property="og:description"
+        content="A web application that lets you generate a random color and its hex code by clicking a button">
+    <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1ApXGL6d1gok0caisg9rLVfinDhY8WmJQ">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="628">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://color-flipper-js.web.app/">
+
     <title>Color Flipper JS</title>
 </head>
 
