update image preview

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Color Flipper">
     <meta property="og:description"
         content="A web application that lets you generate a random color and its hex code by clicking a button">
-    <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1ApXGL6d1gok0caisg9rLVfinDhY8WmJQ">
+    <meta property="og:image" content="https://color-flipper-js.web.app/favicon.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="628">
     <meta property="og:type" content="website">
