--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://color-flipper-js.web.app/">
 
+    <link rel="stylesheet" href="https://app.test.warpme.io/widget/index.css" />
+    <script src="https://app.test.warpme.io/widget/widget.js" async></script>
+
     <title>Color Flipper JS</title>
 </head>
 
